<resources>
    <string name="app_name">BukaToko</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_cart">Cart</string>

    <string name="menu_home">Home</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_notif">Notification</string>
    <string name="nama_produk">Product Name</string>
    <string name="harga">Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_now">Register Now</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="lorem_ipsumm">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</string>
    <string name="buy_now">Buy Now</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="my_account">My Account</string>
    <string name="login_register">Login | Register</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="product_added_to_cart">Product Added to Cart</string>
    <string name="go_to_payment">Go To Payment</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="pay_now">Pay Now</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="total">total</string>
    <string name="price">price</string>
    <string name="total_cart">TOTAL : Rp %s</string>
    <string name="total_rp_0">TOTAL: Rp. 0</string>
    <string name="desc_tf">make a payment soon to No. Rekening Bank BRI 1234567890 a.n PT Green Deahan</string>
    <string name="send_later">Send Later</string>
    <string name="shipping_payment">Shipping Payment</string>
    <string name="continue_transaction">Continue Transaction</string>
    <string name="back_to_cart">Back to Cart</string>
    <string name="send_proof_of_payment">Send proof of payment</string>
    <string name="desc_et_address">Full address as street name and post code ..</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="service_delivery">Service Delivery</string>
    <string name="city">City</string>
    <string name="desc_address">Surabaya - Benowo, Jawa timur 60197</string>
    <string name="rp_0">Rp 0</string>
    <string name="tv_ongkir">Rp %s</string>
    <string name="upload">Upload</string>
    <string name="data_is_empty">Data is Empty!</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="title_activity_tab_sample">TabSampleActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="status">Status</string>
    <string name="lihat_pengiriman">Lihat Pengiriman</string>
</resources>