<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cuncis.bukatoko.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_nav_home_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_nav_home_self"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_transaction"
        android:name="com.cuncis.bukatoko.ui.transaction.TransactionFragment"
        android:label="@string/menu_transaction"
        tools:layout="@layout/fragment_transaction" >
        <action
            android:id="@+id/action_nav_transaction_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_notif"
        android:name="com.cuncis.bukatoko.ui.notification.NotificationFragment"
        android:label="@string/menu_notif"
        tools:layout="@layout/fragment_notification" >
        <action
            android:id="@+id/action_nav_notif_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.cuncis.bukatoko.ui.user.form.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"/>
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:launchSingleTop="true"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.cuncis.bukatoko.ui.user.form.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.cuncis.bukatoko.ui.home.detail.DetailFragment"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <argument
            android:name="product"
            app:argType="com.cuncis.bukatoko.data.model.Product$Data" />
    </fragment>
    <fragment
        android:id="@+id/nav_profil"
        android:name="com.cuncis.bukatoko.ui.user.profile.ProfileFragment"
        android:label="@string/profil"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profil_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.cuncis.bukatoko.ui.cart.CartFragment"
        android:label="Cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_cartFragment_self"
            app:destination="@id/cartFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/cartFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_cartFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.cuncis.bukatoko.ui.cart.checkout.CheckoutFragment"
        android:label="Checkout"
        tools:layout="@layout/fragment_checkout" >
        <argument
            android:name="userId"
            app:argType="integer" />
        <argument
            android:name="grandTotal"
            app:argType="float" />
    </fragment>
</navigation>