<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.cuncis.bukatoko.util.RupiahHelper" />
        <variable
            name="cart"
            type="com.cuncis.bukatoko.data.model.Cart" />
<!--        <variable-->
<!--            name="item"-->
<!--            type="com.cuncis.bukatoko.ui.cart.Item" />-->
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/img_product"
                android:adjustViewBounds="true"
                android:src="@drawable/img_placeholder"
                app:image="@{cart.imageUrl}"/>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_name"
                    android:text="@{cart.productName}"
                    tools:text="@string/lorem_ipsum"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:maxLines="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_price"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:text="@{RupiahHelper.rupiah(cart.price)}"
                    tools:text="@string/price" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <Spinner
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:id="@+id/spin_qty"
                        app:default_spinner_value="@{String.valueOf(1)}"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_total"
                        tools:text="@string/total"
                        android:textStyle="bold"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/btn_delete"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_delete" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>